--- a/app/main.css
+++ b/app/main.css
@@ -1,11 +1,65 @@
 @import "style/normalize.css";
 @import "style/font-awesome.css";
-body {
+body,
+html {
   margin: 0px;
   padding: 0px;
   font-family: Sans-Serif;
   font-style: normal;
   font-variant: normal;
   font-weight: normal;
+}
+html {
+  background-color: #000000;
+  color: #ffffff;
+}
+.center {
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  /* IE 9 */
+  -webkit-transform: translate(-50%, -50%);
+  /* Safari */
+  left: 50%;
+  position: fixed;
+  top: 50%;
+}
+.MainMenu {
+  padding: 0px;
+  height: auto;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  /* IE 9 */
+  -webkit-transform: translate(-50%, -50%);
+  /* Safari */
+  left: 50%;
+  position: fixed;
+  top: 50%;
+  font-size: 2em;
+}
+.MainMenu li {
+  padding: 20px;
+  list-style: none;
+}
+.MainMenu li a {
+  font-style: none;
+  text-decoration: none;
+  color: #ffffff;
+  font-weight: bold;
+}
+.MainMenu li a:hover {
+  color: #f9fe1b;
+}
+.gameWrapper {
+  width: 500px;
+  height: 500px;
   background-color: #ffffff;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  /* IE 9 */
+  -webkit-transform: translate(-50%, -50%);
+  /* Safari */
+  left: 50%;
+  position: fixed;
+  top: 50%;
 }
