--- a/app/main.css
+++ b/app/main.css
@@ -13,6 +13,22 @@ html {
   background-color: #000000;
   color: #ffffff;
 }
+.pacman {
+  position: fixed;
+  width: 40px;
+  height: 40px;
+  background-color: #e5e5e5;
+  -moz-box-shadow: 5px 5px 12px 0px #656565;
+  -webkit-box-shadow: 5px 5px 12px 0px #656565;
+  -o-box-shadow: 5px 5px 12px 0px #656565;
+  box-shadow: 5px 5px 12px 0px #656565;
+  filter: progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=134, Strength=12);
+  -webkit-transition: all 300ms linear;
+  -moz-transition: all 300ms linear;
+  -ms-transition: all 300ms linear;
+  -o-transition: all 300ms linear;
+  transition: all 300ms linear;
+}
 .center {
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -22,6 +38,17 @@ html {
   left: 50%;
   position: fixed;
   top: 50%;
+}
+canvas {
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  /* IE 9 */
+  -webkit-transform: translate(-50%, -50%);
+  /* Safari */
+  left: 50%;
+  position: fixed;
+  top: 50%;
+  background-color: #ffffff;
 }
 .MainMenu {
   padding: 0px;
