--- a/app/style/main.less
+++ b/app/style/main.less
@@ -14,6 +14,27 @@ html {
     background-color: #000000;
     color: #ffffff;
 }
+.transitions(@prop : all; @duration : .5s; @easing : ease) {
+  -webkit-transition            : @prop @duration @easing;
+  -moz-transition                : @prop @duration @easing;
+  -ms-transition                : @prop @duration @easing;
+  -o-transition                 : @prop @duration @easing;
+  transition                     : @prop @duration @easing;
+}
+.pacman{
+    position: fixed;
+    width: 40px;
+    height: 40px;
+    background-color: #e5e5e5;
+
+    -moz-box-shadow: 5px 5px 12px 0px #656565;
+    -webkit-box-shadow: 5px 5px 12px 0px #656565;
+    -o-box-shadow: 5px 5px 12px 0px #656565;
+    box-shadow: 5px 5px 12px 0px #656565;
+    filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=134, Strength=12);
+
+    .transitions(all , 300ms , linear)
+}
 
 .center{
     transform: translate(-50%, -50%);
@@ -23,6 +44,11 @@ html {
     position: fixed;
 
     top: 50%;
+}
+
+canvas{
+    .center;
+    background-color: #ffffff;
 }
 
 .MainMenu{
